BM_NONPROD/2026-03-26/files/home/ec2-user/deployment_artifacts/uat/nats-depl.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: uat-product-catalogue
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-depl
  namespace: uat-product-catalogue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
        - name: nats
          image: 396913725884.dkr.ecr.af-south-1.amazonaws.com/nonprod_bm_ecr_repo:nats-streaming
          args:
            [
              "-p",
              "4222",
              "-m",
              "8222",
              "-hbi",
              "5s",
              "-hbt",
              "5s",
              "-hbf",
              "2",
              "-SD",
              "-cid",
              "product_catalogue",
            ]
---
apiVersion: v1
kind: Service
metadata:
  name: nats-srv
  namespace: uat-product-catalogue
spec:
  selector:
    app: nats
  ports:
    - name: client
      protocol: TCP
      port: 4222
      targetPort: 4222
    - name: monitoring
      protocol: TCP
      port: 8222
      targetPort: 8222
